Move html files to views dir & adjust pathes

--- a/app/views/404.html
+++ b/app/views/404.html
@@ -7,15 +7,14 @@
     <title>Page Not Found | Mannar Hielal</title>
     <meta name="description" content="Page Not Found, please contact me to fix it :)">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="apple-touch-icon" href="img/icon.png">
+    <link rel="apple-touch-icon" href="../img/icon.png">
     <!-- Place favicon.ico in the root directory -->
 
-    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower%7CLibre+Baskerville%7CMontserrat:300,400"
         rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 </head>
@@ -58,7 +57,7 @@
 
             <article class="article-card article-card--hero">
                 <figure class="article-card__fig">
-                    <img class="article-card__img" src="img/contents/404.gif" alt="404-gif">
+                    <img class="article-card__img" src="../img/contents/404.gif" alt="404-gif">
                 </figure>
 
                 <div class="article-card__content flex--centered-col">
@@ -102,7 +101,6 @@
             </li>
         </ul>
     </footer>
-    <script src="js/main.js"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-5825950-10"></script>
