--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -8,15 +8,14 @@
     <meta name="description"
         content="Collection of some projects that i have implemented: Graphic Design projects, CMS and HTML Websites">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="apple-touch-icon" href="img/icon.png">
+    <link rel="apple-touch-icon" href="../img/icon.png">
     <!-- Place favicon.ico in the root directory -->
 
-    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower%7CLibre+Baskerville%7CMontserrat:300,400"
         rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 </head>
@@ -24,7 +23,7 @@
 <body class="portfolio bg--default-color ">
     <header class="header--full-width flex--centered-row bg--richblack">
         <h1 class="header__logo">
-            <a class="text--default-color" href="index.html">Mannar Hielal</a>
+            <a class="text--default-color" href="../views/index.html">Mannar Hielal</a>
         </h1>
 
         <div class="toggle-button">
@@ -35,19 +34,19 @@
 
         <nav class="header__menu overlay">
             <div class="menu__row list--no-bullet h6 flex--centered-row">
-                <a class="nav-menu__link" href="about.html">
+                <a class="nav-menu__link" href="../views/about.html">
                     <span class="menu__item">About Me</span>
                 </a>
 
-                <a class="nav-menu__link" href="portfolio.html">
+                <a class="nav-menu__link" href="../views/portfolio.html">
                     <span class="menu__item">Portfolio</span>
                 </a>
 
-                <a class="nav-menu__link" href="blog.html">
+                <a class="nav-menu__link" href="../views/blog.html">
                     <span class="menu__item">Blog</span>
                 </a>
 
-                <a class="nav-menu__link" href="toplikes.html">
+                <a class="nav-menu__link" href="../views/toplikes.html">
                     <span class="menu__item">Top Likes</span>
                 </a>
             </div>
@@ -68,7 +67,7 @@
             <!-- article hero -->
             <article class="article-card article-card--hero effect--scale hashtag--css-html hashtag--jquery">
                 <figure class="article-card__fig">
-                    <img class="article-card__img filter--gray" src="img/contents/projects/antarctica.jpg"
+                    <img class="article-card__img filter--gray" src="../img/contents/projects/antarctica.jpg"
                         alt="antarctica-project-image">
                 </figure>
 
@@ -84,7 +83,7 @@
                         #WebDevelopment and i trained the things i've already known.
                     </p>
 
-                    <a class="article-card__btn h7" href="projects/antarctica/index.html" target="_blank"></a>
+                    <a class="article-card__btn h7" href="../projects/antarctica/index.html" target="_blank"></a>
                 </div>
             </article>
 
@@ -92,7 +91,7 @@
                 <!-- article 2 -->
                 <article class="article-card effect--scale hashtag--css-html hashtag--sketchapp hashtag--drupal">
                     <figure class="article-card__fig">
-                        <img class="article-card__img filter--gray" src="img/contents/projects/vochabular.jpg"
+                        <img class="article-card__img filter--gray" src="../img/contents/projects/vochabular.jpg"
                             alt="vochabular-project-image">
                     </figure>
 
@@ -119,7 +118,7 @@
                 <!-- article 3 -->
                 <article class="article-card effect--scale hashtag--css-html">
                     <figure class="article-card__fig">
-                        <img class="article-card__img filter--gray" src="img/contents/projects/forty.jpg"
+                        <img class="article-card__img filter--gray" src="../img/contents/projects/forty.jpg"
                             alt="forty-project-image">
                     </figure>
 
@@ -134,13 +133,13 @@
                             through this light weight project.
                         </p>
 
-                        <a class="article-card__btn h7" href="projects/forty3/forty3.html" target="_blank"></a>
+                        <a class="article-card__btn h7" href="../projects/forty3/forty3.html" target="_blank"></a>
                     </div>
                 </article>
                 <!-- article 4 -->
                 <article class="article-card effect--scale hashtag--graphic-design hashtag--infographic">
                     <figure class="article-card__fig">
-                        <img class="article-card__img filter--gray" src="img/contents/projects/infographic.jpg"
+                        <img class="article-card__img filter--gray" src="../img/contents/projects/infographic.jpg"
                             alt="infographic-collection-project-image">
                     </figure>
 
@@ -169,7 +168,7 @@
     <footer class="footer flex--centered-row bg--richblack">
         <ul class="footer__list flex--centered-row list--no-bullet">
             <li>
-                <a href="index.html">
+                <a href="../views/index.html">
                     <div class="item--home"></div>
                 </a>
             </li>
@@ -193,7 +192,6 @@
             </li>
         </ul>
     </footer>
-    <script src="js/main.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-5825950-10"></script>
     <script>
