--- a/app/views/toplikes.html
+++ b/app/views/toplikes.html
@@ -7,15 +7,14 @@
     <title>Top Likes | Mannar Hielal</title>
     <meta name="description" content="Collectoins of things that i favor, best practices, top learning methods..etc">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="apple-touch-icon" href="img/icon.png">
+    <link rel="apple-touch-icon" href="../img/icon.png">
     <!-- Place favicon.ico in the root directory -->
 
-    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower%7CLibre+Baskerville%7CMontserrat:300,400"
         rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 </head>
@@ -23,7 +22,7 @@
 <body class="portfolio bg--default-color ">
     <header class="header--full-width flex--centered-row bg--richblack">
         <h1 class="header__logo">
-            <a class="text--default-color" href="index.html">Mannar Hielal</a>
+            <a class="text--default-color" href="../views/index.html">Mannar Hielal</a>
         </h1>
 
         <div class="toggle-button">
@@ -34,19 +33,19 @@
 
         <nav class="header__menu overlay">
             <div class="menu__row list--no-bullet h6 flex--centered-row">
-                <a class="nav-menu__link" href="about.html">
+                <a class="nav-menu__link" href="../views/about.html">
                     <span class="menu__item">About Me</span>
                 </a>
 
-                <a class="nav-menu__link" href="portfolio.html">
+                <a class="nav-menu__link" href="../views/portfolio.html">
                     <span class="menu__item">Portfolio</span>
                 </a>
 
-                <a class="nav-menu__link" href="blog.html">
+                <a class="nav-menu__link" href="../views/blog.html">
                     <span class="menu__item">Blog</span>
                 </a>
 
-                <a class="nav-menu__link" href="toplikes.html">
+                <a class="nav-menu__link" href="../views/toplikes.html">
                     <span class="menu__item">Top Likes</span>
                 </a>
             </div>
@@ -68,7 +67,7 @@
                 <!-- article 7 -->
                 <article class="article-card effect--scale">
                     <figure class="article-card__fig">
-                        <img class="article-card__img filter--gray" src="img/contents/toplikes/derekbanas.jpg"
+                        <img class="article-card__img filter--gray" src="../img/contents/toplikes/derekbanas.jpg"
                             alt="derekbanas-channel-image">
                     </figure>
 
@@ -92,7 +91,7 @@
                 <!-- article 6 -->
                 <article class="article-card effect--scale hashtag--web-development">
                     <figure class="article-card__fig">
-                        <img class="article-card__img filter--gray" src="img/contents/toplikes/cssguidelines.jpg"
+                        <img class="article-card__img filter--gray" src="../img/contents/toplikes/cssguidelines.jpg"
                             alt="cssguidelines-image">
                     </figure>
 
@@ -116,7 +115,7 @@
                 <!-- article 5 -->
                 <article class="article-card effect--scale hashtag--inline-skating">
                     <figure class="article-card__fig">
-                        <img class="article-card__img filter--gray" src="img/contents/toplikes/shoptask.jpg"
+                        <img class="article-card__img filter--gray" src="../img/contents/toplikes/shoptask.jpg"
                             alt="shoptask-channel-image">
                     </figure>
 
@@ -140,7 +139,7 @@
                 <!-- article 4 -->
                 <article class="article-card effect--scale hashtag--german">
                     <figure class="article-card__fig">
-                        <img class="article-card__img filter--gray" src="img/contents/toplikes/slowgerman.jpg"
+                        <img class="article-card__img filter--gray" src="../img/contents/toplikes/slowgerman.jpg"
                             alt="slowgerman-channel-image">
                     </figure>
 
@@ -163,7 +162,7 @@
                 <!-- article 3 -->
                 <article class="article-card effect--scale hashtag--fitness">
                     <figure class="article-card__fig">
-                        <img class="article-card__img filter--gray" src="img/contents/toplikes/zuzkalight.jpg"
+                        <img class="article-card__img filter--gray" src="../img/contents/toplikes/zuzkalight.jpg"
                             alt="zuzkalight-channel-image">
                     </figure>
 
@@ -186,7 +185,7 @@
                 <!-- article 2 -->
                 <article class="article-card effect--scale hashtag--web-development">
                     <figure class="article-card__fig">
-                        <img class="article-card__img filter--gray" src="img/contents/toplikes/thenetninja.jpg"
+                        <img class="article-card__img filter--gray" src="../img/contents/toplikes/thenetninja.jpg"
                             alt="thenetninja-channel-image">
                     </figure>
 
@@ -211,7 +210,7 @@
                 <!-- article 1 -->
                 <article class="article-card effect--scale hashtag--web-development">
                     <figure class="article-card__fig">
-                        <img class="article-card__img filter--gray" src="img/contents/toplikes/w3school.jpg"
+                        <img class="article-card__img filter--gray" src="../img/contents/toplikes/w3school.jpg"
                             alt="w3school-howto-images">
                     </figure>
 
@@ -238,7 +237,7 @@
     <footer class="footer flex--centered-row bg--richblack">
         <ul class="footer__list flex--centered-row list--no-bullet">
             <li>
-                <a href="index.html">
+                <a href="../views/index.html">
                     <div class="item--home"></div>
                 </a>
             </li>
@@ -262,7 +261,6 @@
             </li>
         </ul>
     </footer>
-    <script src="js/main.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-5825950-10"></script>
     <script>
