--- a/app/views/about.html
+++ b/app/views/about.html
@@ -8,15 +8,14 @@
     <meta name="description"
         content="i wrote here a short biography of me including education skills, languages and some media articles ">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="apple-touch-icon" href="img/icon.png">
+    <link rel="apple-touch-icon" href="../img/icon.png">
     <!-- Place favicon.ico in the root directory -->
 
-    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower%7CLibre+Baskerville%7CMontserrat:300,400"
         rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 </head>
@@ -56,28 +55,28 @@
 
     <div class="about__grid">
         <aside class="grid__sidebar flex--centered-col">
-            <img class="sidebar__img img--small" src="img/avatar-mobile-shadow.png" alt="about-photo-small">
+            <img class="sidebar__img img--small" src="../img/avatar-mobile-shadow.png" alt="about-photo-small">
 
-            <img class="sidebar__img img--large" src="img/about-foto-cut.png" alt="about-photo-large">
+            <img class="sidebar__img img--large" src="../img/about-foto-cut.png" alt="about-photo-large">
 
             <ul class="sidebar__contact list--no-bullet">
                 <li class="contact__item contact--email">
                     <a class="contact__item--link text--onyx h6" href="mailto:adminwithu@gmail.com" target="_blank">
-                        <img src="img/icons/email-side.svg" alt="email-icon">adminwithu@gmail.com
+                        <img src="../img/icons/email-side.svg" alt="email-icon">adminwithu@gmail.com
                     </a>
                 </li>
 
                 <li class="contact__item contact--linkedin">
                     <a class="contact__item--link text--onyx h6" href="https://www.linkedin.com/in/mannar-hielal/"
                         target="_blank">
-                        <img src="img/icons/linkedin-side.svg" alt="linkedin-side-icon">linkedin.com/in/mannar-hielal
+                        <img src="../img/icons/linkedin-side.svg" alt="linkedin-side-icon">linkedin.com/in/mannar-hielal
                     </a>
                 </li>
 
                 <li class="contact__item contact--fb">
                     <a class="contact__item--link text--onyx h6" href="https://www.facebook.com/mannar.hielal"
                         target="_blank">
-                        <img src="img/icons/fb-side.svg" alt="fb-side-icon">facebook.com/mannar.hielal
+                        <img src="../img/icons/fb-side.svg" alt="fb-side-icon">facebook.com/mannar.hielal
                     </a>
                 </li>
             </ul>
@@ -141,7 +140,7 @@
                 <div class="quick-glance--2014  flex--centered-row">
                     <h2 class="2014__title title">2014</h2>
 
-                    <img class="quick-glance__img" src="img/syr.svg" alt="syrian-seperator">
+                    <img class="quick-glance__img" src="../img/syr.svg" alt="syrian-seperator">
 
                     <p class="2014__body">Back In Aleppo, i worked as a web content manager, in my spare i engaged my
                         self in graphic design and studying English. untill all the bad things broke out there :(</p>
@@ -151,7 +150,7 @@
                     <p class="2015__body">In Turkey i worked a graphic design freelance, It was the phase where i had to
                         save for the journey to Europe.</p>
 
-                    <img class="quick-glance__img" src="img/turk.svg" alt="turkish-seperator">
+                    <img class="quick-glance__img" src="../img/turk.svg" alt="turkish-seperator">
 
                     <h2 class="2015__title title">2015</h2>
                 </div>
@@ -159,7 +158,7 @@
                 <div class="quick-glance--2016  flex--centered-row">
                     <h2 class="2016__title title">2016</h2>
 
-                    <img class="quick-glance__img" src="img/ch.svg" alt="switzerland-seperator">
+                    <img class="quick-glance__img" src="../img/ch.svg" alt="switzerland-seperator">
 
                     <p class="2016__body">I did some translation tasks for <a class="h4 dotted"
                             href="http://www.ors.ch/de-CH/Home" target="_blank">ORS </a>and some design work for <a
@@ -172,7 +171,7 @@
                             href="http://powercoders.org/" target="_blank">Powercoders</a> then started an internship as
                         Web Developer trainee by the end of the year i completed B1 German course.</p>
 
-                    <img class="quick-glance__img" src="img/ch.svg" alt="switzerland-seperator">
+                    <img class="quick-glance__img" src="../img/ch.svg" alt="switzerland-seperator">
 
                     <h2 class="2017__title title">2017</h2>
                 </div>
@@ -180,7 +179,7 @@
                 <div class="quick-glance--2018  flex--centered-row">
                     <h2 class="2018__title title">2018</h2>
 
-                    <img class="quick-glance__img" src="img/ch.svg" alt="switzerland-seperator">
+                    <img class="quick-glance__img" src="../img/ch.svg" alt="switzerland-seperator">
 
                     <p class="2018__body">8 month so far at <a class="h4 dotted" href="https://www.liip.ch/en"
                             target="_blank">Liip AG</a> and counting. I also started the B2 German course, P.S: i just
@@ -215,19 +214,19 @@
                     <li class="list__item">
                         <span>German (B1) </span>
                         <br>
-                        <img src="img/de-bar.svg" alt="detusch-bar">
+                        <img src="../img/de-bar.svg" alt="detusch-bar">
                     </li>
 
                     <li class="list__item">
                         <span>English (B2)</span>
                         <br>
-                        <img src="img/eng-bar.svg" alt="english-bar">
+                        <img src="../img/eng-bar.svg" alt="english-bar">
                     </li>
 
                     <li class="list__item">
                         <span>Arabic (mother tongue) </span>
                         <br>
-                        <img src="img/ar-bar.svg" alt="arabic-bar">
+                        <img src="../img/ar-bar.svg" alt="arabic-bar">
                     </li>
                 </ul>
             </section>
@@ -299,7 +298,6 @@
             </li>
         </ul>
     </footer>
-    <script src="js/main.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-5825950-10"></script>
     <script>
