--- a/app/views/blog.html
+++ b/app/views/blog.html
@@ -7,15 +7,14 @@
     <title>Blog | Mannar Hielal</title>
     <meta name="description" content="here i write about: Web Developmnet, Inline Skating, Psychology and Languages">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="apple-touch-icon" href="img/icon.png">
+    <link rel="apple-touch-icon" href="../img/icon.png">
     <!-- Place favicon.ico in the root directory -->
 
-    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower%7CLibre+Baskerville%7CMontserrat:300,400"
         rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
@@ -67,7 +66,7 @@
         <main class="grid__main">
             <article class="article-card article-card--hero effect--scale hashtag--web-development">
                 <figure class="article-card__fig">
-                    <img class="article-card__img filter--gray" src="img/contents/projects/vochabular.jpg"
+                    <img class="article-card__img filter--gray" src="../img/contents/projects/vochabular.jpg"
                         alt="vochabular-project-image">
                 </figure>
 
@@ -117,7 +116,6 @@
             </li>
         </ul>
     </footer>
-    <script src="js/main.js"></script>
     <script id="dsq-count-scr" src="//mannar-hielal.disqus.com/count.js" async></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-5825950-10"></script>
