--- a/app/views/index.html
+++ b/app/views/index.html
@@ -8,14 +8,14 @@
     <meta name="description"
         content="Hi! i write, share and like topics about: Web Developmnet, Inline Skating, Psychology and Languages">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="apple-touch-icon" href="img/icon.png">
+    <link rel="apple-touch-icon" href="../img/icon.png">
     <!-- Place favicon.ico in the root directory -->
 
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower%7CLibre+Baskerville%7CMontserrat:300,400"
         rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 </head>
@@ -28,36 +28,36 @@
 
             <header class="home__grid--header flex--centered-col bg--richblack">
                 <div class="home__avatar">
-                    <a href="index.html"><img class="avatar__img" src="img/mannar-avatar-tablet.png"
+                    <a href="../views/index.html"><img class="avatar__img" src="../img/mannar-avatar-tablet.png"
                             alt="mannar-avatar-tablet"></a>
                 </div>
 
                 <h4 class="header__greet text--lavendergray">Hi, i am</h4>
 
                 <h1 class="header__logo">
-                    <a class="text--default-color" href="index.html">Mannar Hielal</a>
+                    <a class="text--default-color" href="../views/index.html">Mannar Hielal</a>
                 </h1>
 
                 <h4 class="header__slogan text--center text--lavendergray">I started my babysteps at 33, again.</h4>
 
-                <a class="h4 header__btn btn--s" href="about.html">Read My Story</a>
+                <a class="h4 header__btn btn--s" href="../views/about.html">Read My Story</a>
             </header>
 
             <a class="home__grid--blog bg--lavendergray flex--centered-col text--onyx" href="blog.html">
-                <img class="grid__icon blog__icon" src="img/icons/blog-icon.svg" alt="blog-icon">
+                <img class="grid__icon blog__icon" src="../img/icons/blog-icon.svg" alt="blog-icon">
 
                 <h2 class="grid__title h4">Blog</h2>
             </a>
 
             <a class="home__grid--toplikes bg--light-onyx flex--centered-col text--default-color" href="toplikes.html">
-                <img class="grid__icon toplikes__icon" src="img/icons/toplikes-icon.svg" alt="toplikes-icon">
+                <img class="grid__icon toplikes__icon" src="../img/icons/toplikes-icon.svg" alt="toplikes-icon">
 
                 <h2 class="grid__title h4">Top Likes</h2>
             </a>
 
             <a class="home__grid--portfolio bg--dark-rasberry flex--centered-col text--default-color"
                 href="portfolio.html">
-                <img class="grid__icon portfolio__icon" src="img/icons/portfolio-icon.svg" alt="portfolio-icon">
+                <img class="grid__icon portfolio__icon" src="../img/icons/portfolio-icon.svg" alt="portfolio-icon">
 
                 <h2 class="grid__title h4">Portfolio</h2>
             </a>
@@ -75,7 +75,7 @@
     <footer class="footer flex--centered-row bg--richblack">
         <ul class="footer__list flex--centered-row list--no-bullet">
             <li>
-                <a href="index.html">
+                <a href="../views/index.html">
                     <div class="item--home"></div>
                 </a>
             </li>
@@ -99,10 +99,6 @@
             </li>
         </ul>
     </footer>
-    <script src="blockrain/blockrain.jquery.js"></script>
-    <script>
-        $('.game').blockrain();
-    </script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-5825950-10"></script>
     <script>
