Generate multiple html

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -40,7 +40,7 @@
 
                 <h4 class="header__slogan text--center text--lavendergray">I started my babysteps at 33, again.</h4>
 
-                <a class="h4 header__btn btn--s" href="../views/about.html">Read My Story</a>
+                <a class="h4 header__btn btn--s" href="about.html">Read My Story</a>
             </header>
 
             <a class="home__grid--blog bg--lavendergray flex--centered-col text--onyx" href="blog.html">
