--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -34,19 +34,19 @@
 
         <nav class="header__menu overlay">
             <div class="menu__row list--no-bullet h6 flex--centered-row">
-                <a class="nav-menu__link" href="../views/about.html">
+                <a class="nav-menu__link" href="about.html">
                     <span class="menu__item">About Me</span>
                 </a>
 
-                <a class="nav-menu__link" href="../views/portfolio.html">
+                <a class="nav-menu__link" href="portfolio.html">
                     <span class="menu__item">Portfolio</span>
                 </a>
 
-                <a class="nav-menu__link" href="../views/blog.html">
+                <a class="nav-menu__link" href="blog.html">
                     <span class="menu__item">Blog</span>
                 </a>
 
-                <a class="nav-menu__link" href="../views/toplikes.html">
+                <a class="nav-menu__link" href="toplikes.html">
                     <span class="menu__item">Top Likes</span>
                 </a>
             </div>
@@ -168,7 +168,7 @@
     <footer class="footer flex--centered-row bg--richblack">
         <ul class="footer__list flex--centered-row list--no-bullet">
             <li>
-                <a href="../views/index.html">
+                <a href="index.html">
                     <div class="item--home"></div>
                 </a>
             </li>
