--- a/app/views/toplikes.html
+++ b/app/views/toplikes.html
@@ -22,7 +22,7 @@
 <body class="portfolio bg--default-color ">
     <header class="header--full-width flex--centered-row bg--richblack">
         <h1 class="header__logo">
-            <a class="text--default-color" href="../views/index.html">Mannar Hielal</a>
+            <a class="text--default-color" href="index.html">Mannar Hielal</a>
         </h1>
 
         <div class="toggle-button">
@@ -33,19 +33,19 @@
 
         <nav class="header__menu overlay">
             <div class="menu__row list--no-bullet h6 flex--centered-row">
-                <a class="nav-menu__link" href="../views/about.html">
+                <a class="nav-menu__link" href="about.html">
                     <span class="menu__item">About Me</span>
                 </a>
 
-                <a class="nav-menu__link" href="../views/portfolio.html">
+                <a class="nav-menu__link" href="portfolio.html">
                     <span class="menu__item">Portfolio</span>
                 </a>
 
-                <a class="nav-menu__link" href="../views/blog.html">
+                <a class="nav-menu__link" href="blog.html">
                     <span class="menu__item">Blog</span>
                 </a>
 
-                <a class="nav-menu__link" href="../views/toplikes.html">
+                <a class="nav-menu__link" href="toplikes.html">
                     <span class="menu__item">Top Likes</span>
                 </a>
             </div>
@@ -261,6 +261,7 @@
             </li>
         </ul>
     </footer>
+    <script src="../js/isotope-docs.min.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-5825950-10"></script>
     <script>
