--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -23,7 +23,7 @@
 <body class="portfolio bg--default-color ">
     <header class="header--full-width flex--centered-row bg--richblack">
         <h1 class="header__logo">
-            <a class="text--default-color" href="../views/index.html">Mannar Hielal</a>
+            <a class="text--default-color" href="index.html">Mannar Hielal</a>
         </h1>
 
         <div class="toggle-button">
