--- a/app/views/toplikes.html
+++ b/app/views/toplikes.html
@@ -237,7 +237,7 @@
     <footer class="footer flex--centered-row bg--richblack">
         <ul class="footer__list flex--centered-row list--no-bullet">
             <li>
-                <a href="../views/index.html">
+                <a href="index.html">
                     <div class="item--home"></div>
                 </a>
             </li>
@@ -261,7 +261,6 @@
             </li>
         </ul>
     </footer>
-    <script src="../js/isotope-docs.min.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-5825950-10"></script>
     <script>
