Clean up jpg files and fix some pathes

--- a/app/views/blog.html
+++ b/app/views/blog.html
@@ -81,7 +81,7 @@
                         new Blog, my heartily congrats to voCHabular having their new Blog published!
                     </p>
 
-                    <a class="article-card__btn" href="/blog/01blog-vochabular.html" target="_blank"></a>
+                    <a class="article-card__btn" href="./01blog-vochabular.html" target="_blank"></a>
 
                 </div>
             </article>
