--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -83,7 +83,7 @@
                         #WebDevelopment and i trained the things i've already known.
                     </p>
 
-                    <a class="article-card__btn h7" href="../projects/antarctica/index.html" target="_blank"></a>
+                    <a class="article-card__btn h7" href="projects/antarctica/index.html" target="_blank"></a>
                 </div>
             </article>
 
@@ -133,7 +133,7 @@
                             through this light weight project.
                         </p>
 
-                        <a class="article-card__btn h7" href="../projects/forty3/forty3.html" target="_blank"></a>
+                        <a class="article-card__btn h7" href="projects/forty3/forty3.html" target="_blank"></a>
                     </div>
                 </article>
                 <!-- article 4 -->
