--- a/app/views/about.html
+++ b/app/views/about.html
@@ -57,7 +57,7 @@
         <aside class="grid__sidebar flex--centered-col">
             <img class="sidebar__img img--small" src="../img/avatar-mobile-shadow.png" alt="about-photo-small">
 
-            <img class="sidebar__img img--large" src="../img/about-foto-cut.png" alt="about-photo-large">
+            <img class="sidebar__img img--large" src="../img/about-foto-cut.jpeg" alt="about-photo-large">
 
             <ul class="sidebar__contact list--no-bullet">
                 <li class="contact__item contact--email">
