tweek the portrait image and background

--- a/app/sass/_home.scss
+++ b/app/sass/_home.scss
@@ -332,9 +332,10 @@ a.home__grid--toplikes,
     }
     .home__portrait {
         display: block;
-        background: url("../img/portrait-bw.png") no-repeat center bottom;
+        background: url("../img/portrait-bw.jpg") no-repeat center bottom;
         background-size: contain; //432px
         min-width: 385px;
+         background-color: white;
     }
     // .latest__list .list__item {
     //     padding-bottom: 14px;
@@ -417,11 +418,10 @@ a.home__grid--toplikes,
     }
     .home__portrait {
         display: block;
-        background: url("../img/portrait-bw.png") no-repeat center bottom;
+        background: url("../img/portrait-bw.jpg") no-repeat center bottom;
         background-size: contain;
         min-width: 300px; 
         position: relative;
-
     } 
     .home__avatar {
         display: none;
