--- a/app/views/404.html
+++ b/app/views/404.html
@@ -56,9 +56,9 @@
         <main class="grid__main">
 
             <article class="article-card article-card--hero">
-                <figure class="article-card__fig">
-                    <img class="article-card__img" src="../img/contents/404.gif" alt="404-gif">
-                </figure>
+                <video class="float-left mr-3 mb-3 post-image" autoplay loop muted playsinline>
+                    <source src="../img/contents/404.mp4" type="video/mp4">
+                </video>
 
                 <div class="article-card__content flex--centered-col">
                     <h2 class="article-card__title title">Page Not Found!</h2>
