--- a/app/views/index.html
+++ b/app/views/index.html
@@ -11,8 +11,6 @@
     <link rel="apple-touch-icon" href="../img/icon.png">
     <!-- Place favicon.ico in the root directory -->
 
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower%7CLibre+Baskerville%7CMontserrat:300,400"
-        rel="stylesheet">
     <link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
@@ -22,6 +20,23 @@
     <link rel="preconnect" href="https://www.twitter.com">
     <link rel="preconnect" href="https://www.google-analytics.com">
     <link rel="preconnect" href="https://www.googletagmanager.com">
+
+    <link rel="preload" href="./../fonts/indie-flower-v12-latin-regular.woff2" as="font" type="font/woff2"
+        crossorigin="">
+    <link rel="preload" href="./../fonts/indie-flower-v12-latin-regular.woff" as="font" type="font/woff2"
+        crossorigin="">
+
+    <link rel="preload" href="./../fonts/libre-baskerville-v9-latin-regular.woff2" as="font" type="font/woff2"
+        crossorigin="">
+    <link rel="preload" href="./../fonts/libre-baskerville-v9-latin-regular.woff" as="font" type="font/woff2"
+        crossorigin="">
+
+    <link rel="preload" href="./../fonts/montserrat-v15-latin-300.woff2" as="font" type="font/woff2" crossorigin="">
+    <link rel="preload" href="./../fonts/montserrat-v15-latin-300.woff" as="font" type="font/woff2" crossorigin="">
+
+    <link rel="preload" href="./../fonts/montserrat-v15-latin-regular.woff2" as="font" type="font/woff2" crossorigin="">
+    <link rel="preload" href="./../fonts/montserrat-v15-latin-regular.woff" as="font" type="font/woff2" crossorigin="">
+
 </head>
 
 <body class="home bg--onyx">
