prefetch google analytics and host twitter widgets.js

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,9 +16,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <link rel="preconnect" href="https://www.google-analytics.com">
+    <link rel="prefetch" href="https://www.google-analytics.com">
     <link rel="preconnect" href="https://www.twitter.com">
-    <link rel="preconnect" href="https://www.google-analytics.com">
     <link rel="preconnect" href="https://www.googletagmanager.com">
 
     <link rel="preload" href="./../fonts/indie-flower-v12-latin-regular.woff2" as="font" type="font/woff2"
@@ -84,7 +83,6 @@
             <section class="home__grid--latest bg--default-color">
                 <a class="twitter-timeline" href="https://twitter.com/dragonixgirl?ref_src=twsrc%5Etfw"
                     data-width="100%" data-height="100%">Tweets by dragonixgirl</a>
-                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </section>
 
             <div class="home__grid--game game"></div>
