--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,9 +16,10 @@
     <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <link rel="prefetch" href="https://www.google-analytics.com">
+    <link rel="preconnect" href="https://www.google-analytics.com">
     <link rel="preconnect" href="https://www.twitter.com">
     <link rel="preconnect" href="https://www.googletagmanager.com">
+    <link rel="preconnect" href="https://www.google.com">
 
     <link rel="preload" href="./../fonts/indie-flower-v12-latin-regular.woff2" as="font" type="font/woff2"
         crossorigin="">
