--- a/app/views/index.html
+++ b/app/views/index.html
@@ -37,6 +37,12 @@
     <link rel="preload" href="./../fonts/montserrat-v15-latin-regular.woff2" as="font" type="font/woff2" crossorigin="">
     <link rel="preload" href="./../fonts/montserrat-v15-latin-regular.woff" as="font" type="font/woff2" crossorigin="">
 
+    <link rel="modulepreload" href="https://www.google-analytics.com/analytics.js" />
+    <link rel="modulepreload"
+        href="https://platform.twitter.com/js/moment~timeline.bcb1cafa923482f4826e32741fe16a98.js" />
+    <link rel="modulepreload" href="https://platform.twitter.com/js/timeline.28ecda9667eeb8e1b18898b99fee6c31.js" />
+    <link rel="prefetch" href="https://platform.twitter.com/css/timeline.32f7f89e2e680ebfe3f4cfefb27966ae.light.ltr.css"
+        as="style" />
 </head>
 
 <body class="home bg--onyx">
