Lazy load images

--- a/app/views/01blog-vochabular.html
+++ b/app/views/01blog-vochabular.html
@@ -58,7 +58,7 @@
             <article class="article-card article-card--hero">
                 <figure class="article-card__fig">
                     <img class="article-card__img" src="../img/contents/projects/vochabular-hero.jpg"
-                        alt="vochabular-project-image">
+                        alt="vochabular-project-image" loading="lazy">
                 </figure>
 
                 <div class="article-card__content flex--centered-col">
@@ -113,7 +113,7 @@
 
                     <figure class="article-card__fig">
                         <img class="article-card__img" src="../img/contents/projects/vochabular02.jpg"
-                            alt="vochabular-project-image">
+                            alt="vochabular-project-image" loading="lazy">
                         <figcaption class="h7 text--lavendergray">
                             prototyping and sketches of "Vochabular" blog.
                         </figcaption>
@@ -123,7 +123,7 @@
 
                     <figure class="article-card__fig">
                         <img class="article-card__img" src="../img/contents/projects/vochabular03.jpg"
-                            alt="vochabular-project-image">
+                            alt="vochabular-project-image" loading="lazy">
                         <figcaption class="h7 text--lavendergray">
                             blog.vochabular.ch
                         </figcaption>
