--- a/app/views/about.html
+++ b/app/views/about.html
@@ -53,28 +53,31 @@
 
     <div class="about__grid">
         <aside class="grid__sidebar flex--centered-col">
-            <img class="sidebar__img img--small" src="../img/avatar-mobile-shadow.png" alt="about-photo-small">
+            <img class="sidebar__img img--small" src="../img/avatar-mobile-shadow.png" alt="about-photo-small"
+                loading="lazy">
 
-            <img class="sidebar__img img--large" src="../img/about-foto-cut.jpeg" alt="about-photo-large">
+            <img class="sidebar__img img--large" src="../img/about-foto-cut.jpeg" alt="about-photo-large"
+                loading="lazy">
 
             <ul class="sidebar__contact list--no-bullet">
                 <li class="contact__item contact--email">
                     <a class="contact__item--link text--onyx h6" href="mailto:adminwithu@gmail.com" target="_blank">
-                        <img src="../img/icons/email-side.svg" alt="email-icon">adminwithu@gmail.com
+                        <img src="../img/icons/email-side.svg" alt="email-icon" loading="lazy">adminwithu@gmail.com
                     </a>
                 </li>
 
                 <li class="contact__item contact--linkedin">
                     <a class="contact__item--link text--onyx h6" href="https://www.linkedin.com/in/mannar-hielal/"
                         target="_blank">
-                        <img src="../img/icons/linkedin-side.svg" alt="linkedin-side-icon">linkedin.com/in/mannar-hielal
+                        <img src="../img/icons/linkedin-side.svg" alt="linkedin-side-icon"
+                            loading="lazy">linkedin.com/in/mannar-hielal
                     </a>
                 </li>
 
                 <li class="contact__item contact--fb">
                     <a class="contact__item--link text--onyx h6" href="https://www.facebook.com/mannar.hielal"
                         target="_blank">
-                        <img src="../img/icons/fb-side.svg" alt="fb-side-icon">facebook.com/mannar.hielal
+                        <img src="../img/icons/fb-side.svg" alt="fb-side-icon" loading="lazy">facebook.com/mannar.hielal
                     </a>
                 </li>
             </ul>
@@ -138,7 +141,7 @@
                 <div class="quick-glance--2014  flex--centered-row">
                     <h2 class="2014__title title">2014</h2>
 
-                    <img class="quick-glance__img" src="../img/syr.svg" alt="syrian-seperator">
+                    <img class="quick-glance__img" src="../img/syr.svg" alt="syrian-seperator" loading="lazy">
 
                     <p class="2014__body">Back In Aleppo, i worked as a web content manager, in my spare i engaged my
                         self in graphic design and studying English. untill all the bad things broke out there :(</p>
@@ -148,7 +151,7 @@
                     <p class="2015__body">In Turkey i worked a graphic design freelance, It was the phase where i had to
                         save for the journey to Europe.</p>
 
-                    <img class="quick-glance__img" src="../img/turk.svg" alt="turkish-seperator">
+                    <img class="quick-glance__img" src="../img/turk.svg" alt="turkish-seperator" loading="lazy">
 
                     <h2 class="2015__title title">2015</h2>
                 </div>
@@ -156,7 +159,7 @@
                 <div class="quick-glance--2016  flex--centered-row">
                     <h2 class="2016__title title">2016</h2>
 
-                    <img class="quick-glance__img" src="../img/ch.svg" alt="switzerland-seperator">
+                    <img class="quick-glance__img" src="../img/ch.svg" alt="switzerland-seperator" loading="lazy">
 
                     <p class="2016__body">I did some translation tasks for <a class="h4 dotted"
                             href="http://www.ors.ch/de-CH/Home" target="_blank">ORS </a>and some design work for <a
@@ -169,7 +172,7 @@
                             href="http://powercoders.org/" target="_blank">Powercoders</a> then started an internship as
                         Web Developer trainee by the end of the year i completed B1 German course.</p>
 
-                    <img class="quick-glance__img" src="../img/ch.svg" alt="switzerland-seperator">
+                    <img class="quick-glance__img" src="../img/ch.svg" alt="switzerland-seperator" loading="lazy">
 
                     <h2 class="2017__title title">2017</h2>
                 </div>
@@ -177,7 +180,7 @@
                 <div class="quick-glance--2018  flex--centered-row">
                     <h2 class="2018__title title">2018</h2>
 
-                    <img class="quick-glance__img" src="../img/ch.svg" alt="switzerland-seperator">
+                    <img class="quick-glance__img" src="../img/ch.svg" alt="switzerland-seperator" loading="lazy">
 
                     <p class="2018__body">8 month so far at <a class="h4 dotted" href="https://www.liip.ch/en"
                             target="_blank">Liip AG</a> and counting. I also started the B2 German course, P.S: i just
@@ -212,19 +215,19 @@
                     <li class="list__item">
                         <span>German (B1) </span>
                         <br>
-                        <img src="../img/de-bar.svg" alt="detusch-bar">
+                        <img src="../img/de-bar.svg" alt="detusch-bar" loading="lazy">
                     </li>
 
                     <li class="list__item">
                         <span>English (B2)</span>
                         <br>
-                        <img src="../img/eng-bar.svg" alt="english-bar">
+                        <img src="../img/eng-bar.svg" alt="english-bar" loading="lazy">
                     </li>
 
                     <li class="list__item">
                         <span>Arabic (mother tongue) </span>
                         <br>
-                        <img src="../img/ar-bar.svg" alt="arabic-bar">
+                        <img src="../img/ar-bar.svg" alt="arabic-bar" loading="lazy">
                     </li>
                 </ul>
             </section>
