--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -66,7 +66,7 @@
             <article class="article-card article-card--hero effect--scale hashtag--css-html hashtag--jquery">
                 <figure class="article-card__fig">
                     <img class="article-card__img filter--gray" src="../img/contents/projects/antarctica.jpg"
-                        alt="antarctica-project-image">
+                        alt="antarctica-project-image" loading="lazy">
                 </figure>
 
                 <div class="article-card__content flex--centered-col">
@@ -90,7 +90,7 @@
                 <article class="article-card effect--scale hashtag--css-html hashtag--sketchapp hashtag--drupal">
                     <figure class="article-card__fig">
                         <img class="article-card__img filter--gray" src="../img/contents/projects/vochabular.jpg"
-                            alt="vochabular-project-image">
+                            alt="vochabular-project-image" loading="lazy">
                     </figure>
 
                     <div class="article-card__content flex--centered-col">
@@ -117,7 +117,7 @@
                 <article class="article-card effect--scale hashtag--css-html">
                     <figure class="article-card__fig">
                         <img class="article-card__img filter--gray" src="../img/contents/projects/forty.jpg"
-                            alt="forty-project-image">
+                            alt="forty-project-image" loading="lazy">
                     </figure>
 
                     <div class="article-card__content flex--centered-col">
@@ -138,7 +138,7 @@
                 <article class="article-card effect--scale hashtag--graphic-design hashtag--infographic">
                     <figure class="article-card__fig">
                         <img class="article-card__img filter--gray" src="../img/contents/projects/infographic.jpg"
-                            alt="infographic-collection-project-image">
+                            alt="infographic-collection-project-image" loading="lazy">
                     </figure>
 
                     <div class="article-card__content flex--centered-col">
