--- a/app/views/blog.html
+++ b/app/views/blog.html
@@ -65,7 +65,7 @@
             <article class="article-card article-card--hero effect--scale hashtag--web-development">
                 <figure class="article-card__fig">
                     <img class="article-card__img filter--gray" src="../img/contents/projects/vochabular.jpg"
-                        alt="vochabular-project-image">
+                        alt="vochabular-project-image" loading="lazy">
                 </figure>
 
                 <div class="article-card__content flex--centered-col">
