--- a/app/views/toplikes.html
+++ b/app/views/toplikes.html
@@ -66,7 +66,7 @@
                 <article class="article-card effect--scale">
                     <figure class="article-card__fig">
                         <img class="article-card__img filter--gray" src="../img/contents/toplikes/derekbanas.jpg"
-                            alt="derekbanas-channel-image">
+                            alt="derekbanas-channel-image" loading="lazy">
                     </figure>
 
                     <div class="article-card__content flex--centered-col">
@@ -90,7 +90,7 @@
                 <article class="article-card effect--scale hashtag--web-development">
                     <figure class="article-card__fig">
                         <img class="article-card__img filter--gray" src="../img/contents/toplikes/cssguidelines.jpg"
-                            alt="cssguidelines-image">
+                            alt="cssguidelines-image" loading="lazy">
                     </figure>
 
                     <div class="article-card__content flex--centered-col">
@@ -114,7 +114,7 @@
                 <article class="article-card effect--scale hashtag--inline-skating">
                     <figure class="article-card__fig">
                         <img class="article-card__img filter--gray" src="../img/contents/toplikes/shoptask.jpg"
-                            alt="shoptask-channel-image">
+                            alt="shoptask-channel-image" loading="lazy">
                     </figure>
 
                     <div class="article-card__content flex--centered-col">
@@ -138,7 +138,7 @@
                 <article class="article-card effect--scale hashtag--german">
                     <figure class="article-card__fig">
                         <img class="article-card__img filter--gray" src="../img/contents/toplikes/slowgerman.jpg"
-                            alt="slowgerman-channel-image">
+                            alt="slowgerman-channel-image" loading="lazy">
                     </figure>
 
                     <div class="article-card__content flex--centered-col">
@@ -161,7 +161,7 @@
                 <article class="article-card effect--scale hashtag--fitness">
                     <figure class="article-card__fig">
                         <img class="article-card__img filter--gray" src="../img/contents/toplikes/zuzkalight.jpg"
-                            alt="zuzkalight-channel-image">
+                            alt="zuzkalight-channel-image" loading="lazy">
                     </figure>
 
                     <div class="article-card__content flex--centered-col">
@@ -184,7 +184,7 @@
                 <article class="article-card effect--scale hashtag--web-development">
                     <figure class="article-card__fig">
                         <img class="article-card__img filter--gray" src="../img/contents/toplikes/thenetninja.jpg"
-                            alt="thenetninja-channel-image">
+                            alt="thenetninja-channel-image" loading="lazy">
                     </figure>
 
                     <div class="article-card__content flex--centered-col">
@@ -209,7 +209,7 @@
                 <article class="article-card effect--scale hashtag--web-development">
                     <figure class="article-card__fig">
                         <img class="article-card__img filter--gray" src="../img/contents/toplikes/w3school.jpg"
-                            alt="w3school-howto-images">
+                            alt="w3school-howto-images" loading="lazy">
                     </figure>
 
                     <div class="article-card__content flex--centered-col">
