--- a/app/views/index.html
+++ b/app/views/index.html
@@ -37,7 +37,7 @@
     <link rel="preload" href="./../fonts/montserrat-v15-latin-regular.woff2" as="font" type="font/woff2" crossorigin="">
     <link rel="preload" href="./../fonts/montserrat-v15-latin-regular.woff" as="font" type="font/woff2" crossorigin="">
 
-    <link rel="modulepreload" href="https://www.google-analytics.com/analytics.js" />
+    <link rel="modulepreload" href="https://www.google-analytics.com/analytics.js" crossorigin="" />
     <link rel="modulepreload"
         href="https://platform.twitter.com/js/moment~timeline.bcb1cafa923482f4826e32741fe16a98.js" />
     <link rel="modulepreload" href="https://platform.twitter.com/js/timeline.28ecda9667eeb8e1b18898b99fee6c31.js" />
