--- a/app/views/01blog-vochabular.html
+++ b/app/views/01blog-vochabular.html
@@ -226,7 +226,7 @@
     <script id="dsq-count-scr" src="//mannar-hielal.disqus.com/count.js" async></script>
 
     <!-- Go to www.addthis.com/dashboard to customize your tools -->
-    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4ee26f35551a2abc"></script>
+    <script type="text/javascript" src="https://s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4ee26f35551a2abc"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-5825950-10"></script>
