--- a/app/views/404.html
+++ b/app/views/404.html
@@ -54,7 +54,7 @@
         <main class="grid__main">
 
             <article class="article-card article-card--hero">
-                <video class="float-left mr-3 mb-3 post-image" autoplay loop muted playsinline>
+                <video class="float-left mr-3 mb-3 post-image" autoplay loop muted playsinline width="500px">
                     <source src="../img/contents/404.mp4" type="video/mp4">
                 </video>
 
