Sperate footer and analytics into its own partials

--- a/app/views/404.html
+++ b/app/views/404.html
@@ -40,44 +40,8 @@
             </article>
         </main>
     </div>
-
-    <footer class="footer flex--centered-row bg--richblack">
-        <ul class="footer__list flex--centered-row list--no-bullet">
-            <li>
-                <a href="index.hthml">
-                    <div class="item--home"></div>
-                </a>
-            </li>
-
-            <li class="item__icon ">
-                <a href="mailto:adminwithu@gmail.com" target="_blank">
-                    <div class="item--email"></div>
-                </a>
-            </li>
-
-            <li class="item__icon">
-                <a href="https://www.linkedin.com/in/mannar-hielal/" target="_blank">
-                    <div class="item--linkedin"></div>
-                </a>
-            </li>
-
-            <li class="item__icon">
-                <a href="https://www.facebook.com/mannar.hielal" target="_blank">
-                    <div class="item--fb"></div>
-                </a>
-            </li>
-        </ul>
-    </footer>
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-5825950-10"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-5825950-10');
-    </script>
+    <footer></footer>
+    <analytics></analytics>
 </body>
 
 </html>
