Add excplicit width and height to img tag

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -23,10 +23,10 @@
     <div class="about__grid">
         <aside class="grid__sidebar flex--centered-col">
             <img class="sidebar__img img--small" src="../img/avatar-mobile-shadow.png" alt="about-photo-small"
-                loading="lazy">
+                loading="lazy" width="81" height="81">
 
             <img class="sidebar__img img--large" src="../img/about-foto-cut.jpeg" alt="about-photo-large"
-                loading="lazy">
+                loading="lazy" width="272" height="317">
 
             <ul class="sidebar__contact list--no-bullet">
                 <li class="contact__item contact--email">
