--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -35,7 +35,7 @@
             <article class="article-card article-card--hero effect--scale hashtag--css-html hashtag--jquery">
                 <figure class="article-card__fig">
                     <img class="article-card__img filter--gray" src="../img/contents/projects/antarctica.jpg"
-                        alt="antarctica-project-image" loading="lazy">
+                        alt="antarctica-project-image" loading="lazy" width="470" height="255">
                 </figure>
 
                 <div class="article-card__content flex--centered-col">
@@ -59,7 +59,7 @@
                 <article class="article-card effect--scale hashtag--css-html hashtag--sketchapp hashtag--drupal">
                     <figure class="article-card__fig">
                         <img class="article-card__img filter--gray" src="../img/contents/projects/vochabular.jpg"
-                            alt="vochabular-project-image" loading="lazy">
+                            alt="vochabular-project-image" loading="lazy" width="470" height="255">
                     </figure>
 
                     <div class="article-card__content flex--centered-col">
@@ -86,7 +86,7 @@
                 <article class="article-card effect--scale hashtag--css-html">
                     <figure class="article-card__fig">
                         <img class="article-card__img filter--gray" src="../img/contents/projects/forty.jpg"
-                            alt="forty-project-image" loading="lazy">
+                            alt="forty-project-image" loading="lazy" width="470" height="255">
                     </figure>
 
                     <div class="article-card__content flex--centered-col">
@@ -107,7 +107,7 @@
                 <article class="article-card effect--scale hashtag--graphic-design hashtag--infographic">
                     <figure class="article-card__fig">
                         <img class="article-card__img filter--gray" src="../img/contents/projects/infographic.jpg"
-                            alt="infographic-collection-project-image" loading="lazy">
+                            alt="infographic-collection-project-image" loading="lazy" width="470" height="255">
                     </figure>
 
                     <div class="article-card__content flex--centered-col">
