--- a/app/views/toplikes.html
+++ b/app/views/toplikes.html
@@ -31,11 +31,11 @@
         <main class="grid__main">
 
             <div class="article-grid flex--centered-row hashtag--web-development">
-                <!-- article 7 -->
+                <!-- Top like 1 -->
                 <article class="article-card effect--scale">
                     <figure class="article-card__fig">
                         <img class="article-card__img filter--gray" src="../img/contents/toplikes/derekbanas.jpg"
-                            alt="derekbanas-channel-image" loading="lazy">
+                            alt="derekbanas-channel-image" loading="lazy" width="470" height="255">
                     </figure>
 
                     <div class="article-card__content flex--centered-col">
@@ -55,11 +55,11 @@
                     </div>
                 </article>
 
-                <!-- article 6 -->
+                <!--Top like 2 -->
                 <article class="article-card effect--scale hashtag--web-development">
                     <figure class="article-card__fig">
                         <img class="article-card__img filter--gray" src="../img/contents/toplikes/cssguidelines.jpg"
-                            alt="cssguidelines-image" loading="lazy">
+                            alt="cssguidelines-image" loading="lazy" width="470" height="255">
                     </figure>
 
                     <div class="article-card__content flex--centered-col">
@@ -79,11 +79,11 @@
                     </div>
                 </article>
 
-                <!-- article 5 -->
+                <!--Top like 3 -->
                 <article class="article-card effect--scale hashtag--inline-skating">
                     <figure class="article-card__fig">
                         <img class="article-card__img filter--gray" src="../img/contents/toplikes/shoptask.jpg"
-                            alt="shoptask-channel-image" loading="lazy">
+                            alt="shoptask-channel-image" loading="lazy" width="470" height="255">
                     </figure>
 
                     <div class="article-card__content flex--centered-col">
@@ -103,11 +103,11 @@
                     </div>
                 </article>
 
-                <!-- article 4 -->
+                <!-- Top Like 4 -->
                 <article class="article-card effect--scale hashtag--german">
                     <figure class="article-card__fig">
                         <img class="article-card__img filter--gray" src="../img/contents/toplikes/slowgerman.jpg"
-                            alt="slowgerman-channel-image" loading="lazy">
+                            alt="slowgerman-channel-image" loading="lazy" width="470" height="255">
                     </figure>
 
                     <div class="article-card__content flex--centered-col">
@@ -126,7 +126,7 @@
                     </div>
                 </article>
 
-                <!-- article 3 -->
+                <!-- Top like 6 -->
                 <article class="article-card effect--scale hashtag--fitness">
                     <figure class="article-card__fig">
                         <img class="article-card__img filter--gray" src="../img/contents/toplikes/zuzkalight.jpg"
@@ -149,11 +149,11 @@
                     </div>
                 </article>
 
-                <!-- article 2 -->
+                <!-- Top Like 7 -->
                 <article class="article-card effect--scale hashtag--web-development">
                     <figure class="article-card__fig">
                         <img class="article-card__img filter--gray" src="../img/contents/toplikes/thenetninja.jpg"
-                            alt="thenetninja-channel-image" loading="lazy">
+                            alt="thenetninja-channel-image" loading="lazy" width="470" height="255">
                     </figure>
 
                     <div class="article-card__content flex--centered-col">
@@ -174,11 +174,11 @@
                     </div>
                 </article>
 
-                <!-- article 1 -->
+                <!-- Top Like 8 -->
                 <article class="article-card effect--scale hashtag--web-development">
                     <figure class="article-card__fig">
                         <img class="article-card__img filter--gray" src="../img/contents/toplikes/w3school.jpg"
-                            alt="w3school-howto-images" loading="lazy">
+                            alt="w3school-howto-images" loading="lazy" width="470" height="255">
                     </figure>
 
                     <div class="article-card__content flex--centered-col">
